--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 volumes:
   certs:
   certbot-challenges:
@@ -22,11 +20,13 @@ services:
     ports:
       - "80:80"
       - "443:443"
+      - "3000:3000" # Grafana
     volumes:
       - /var/nginx-proxy/configs:/etc/nginx/conf.d
       - /var/nginx-proxy/static:/var/www/static
       - certs:/etc/letsencrypt
       - certbot-challenges:/var/www/certbot
+      - ./scripts/docker:/app/scripts
     env_file:
       - ".env"
     logging:
